--- a/index.html
+++ b/index.html
@@ -11,34 +11,36 @@
 
 <body>
     <header>
-        <img src="img/Vector.svg" alt="logo teste">
-        <nav>
-            <a href="">Comunidade</a>
-            <a href="">Tutorial</a>
-            <a href="">Open Source</a>
-            <a href="">Comandos</a>
+        <img class="cabecalho-imagem" src="img/Vector.svg" alt="logo teste">
+        <nav class="cabecalho-manu">
+            <a class="cabecalho-manu-item">Comunidade</a>
+            <a class="cabecalho-manu-item">Tutorial</a>
+            <a class="cabecalho-manu-item"> Open Source</a>
+            <a class="cabecalho-manu-item">Comandos</a>
         </nav>
     </header>
 
     <main>
-        <section>
-            <div class="container">
+        <section class="container"> 
+            <div class="conteudo-principal">
                 <h1>Carllos166</h1>
-                <h2>Alguns dos meus projetos</h2>
-                <button>Me contate</button>
+                <h2 class="conteudo-principal-escrito">Alguns dos meus projetos</h2>
+                <button class="conteudo-principal-botao">Me contate</button>
             </div>
-            <img src="img/Group 2 1.svg" alt="Imagem aleatória de natal">
+            <img class="conteudo-principal-image" src="img/Group 2 1.svg" alt="Imagem aleatória de natal">
         </section>
 
-        <section>
-            <h3>Sobre mim</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo debitis ipsa provident distinctio soluta sint consequuntur repellat quisquam? Voluptas blanditiis earum neque maiores placeat.</p>
+        <section class="container-secundario">
+            <h3 class="conteudo-secundario--titulo">Sobre mim</h3>
+            <p class="conteudo-secundario-paragrafo">Lorem ipsum dolor sit amet.</p>
+            <p class="conteudo-secundario-paragrafo">Lorem ipsum, dolor sit amet consectetur adipisicing..</p>
+            <p class="conteudo-secundario-paragrafo">Lorem ipsum dolor sit amet.</p>
 
         </section>
     </main>
 
-    <footer>
-
+    <footer class="container-rodape">
+        <img class="rodape-image" src="img/BALLERINI.svg" alt="Uma imagem teste no footer">
     </footer>
     
 </body>
